@@ -24,6 +24,7 @@
  - Removed Function
 
 0.5
+* ConfigFrame JCalendar
 * ConfigFrame captions encapsulated 
 * Feed captions
 
